# tartarus

./: .gitignore  404.html  CNAME  Cargo.toml  CoordinatorConfiguration.kt  Key.kt  README.md  bots_generated.rs  build.rs  configuration.ts  coordinator-configuration.ts  index.html  key.ts  make_flatbuffers.sh  make_kotlin.sh  make_protos.sh  partitions.csv  partitions_2.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
architecture/: index.html
archive/tartarus-coordinator-python/: .gitignore  auth_pb2.py  contract_generated.rs  pyproject.toml
archive/tartarus-coordinator-python/tartarus-coordinator/: app.py  base.py  bot.py  lock_session.py
building_the_lock/: index.html
docs/: CNAME  mkdocs.yml
docs/docs/: architecture.md  building_the_lock.md  index.md  setting_up_the_lock.md  sub_user_guide.md  usage_guide_for_authors.md  what_is_tartarus.md
docs/docs/static/: tartarus_parts.3mf
flatbuffers/: bots.fbs  configuration.fbs  contract.fbs  event.fbs  firmware.fbs
overlord_exe/: build.gradle.kts  settings.gradle.kts
overlord_exe/src/integrationTest/resources/: application-test.properties
overlord_exe/src/main/resources/: application.properties
protobufs/: auth.proto
search/: search_index.json
setting_up_the_lock/: index.html
src/: acknowledger.rs  boot_screen.rs  config_verifier.rs  configuration_generated.rs  contract_generated.rs  display_contract_screen.rs  event_generated.rs  fb_helper.rs  firmware_generated.rs  firmware_screen.rs  firmware_updater.rs  generated.rs  internal_config.rs  internal_contract.rs  internal_firmware.rs  lock_ctx.rs  lock_state_machine.rs  lock_state_screen.rs  main.rs  mqtt_service.rs  overlay.rs  overlays.rs  prelude.rs  qr_screen.rs  screen_ids.rs  screen_state.rs  servo.rs  under_contract_screen.rs  verifier.rs  wifi_info_screen.rs  wifi_util.rs
sub_user_guide/: index.html
support/: contract_generated.rs  ec_private_key.pem  ec_public_key.pem  pyproject.toml
support/buffers/: contract.fbs
support/subjugated/club/: Capabilities.py  Contract.py  MessagePayload.py  WebHook.py
support/support/: app.py  test_flatbuffer.py  test_json.py
tartarus/: README.md  angular.json  package-lock.json  package.json
tartarus-bot-example/: README.md  ec_private_key.pem  ec_public_key.pem  pyproject.toml
tartarus-bot-example/src/club/subjugated/fb/bots/: BotApiMessage.py  CreateCommandRequest.py  CreateCommandResponse.py  CreateContractRequest.py  CreateContractResponse.py  CreateMessageRequest.py  CreateMessageResponse.py  Error.py  GetContractRequest.py  GetContractResponse.py  GetLockSessionRequest.py  GetLockSessionResponse.py  MessagePayload.py
tartarus-bot-example/src/club/subjugated/fb/event/: CommonMetadata.py  Event.py  EventType.py  SignedEvent.py
tartarus-bot-example/src/club/subjugated/fb/message/: AbortCommand.py  Acknowledgement.py  Bot.py  Contract.py  Error.py  LockCommand.py  MessagePayload.py  PeriodicUpdate.py  Permission.py  ReleaseCommand.py  ResetCommand.py  SignedMessage.py  StartedUpdate.py  UnlockCommand.py
tartarus-bot-example/src/club/subjugated/fb/message/configuration/: CoordinatorConfiguration.py  Key.py
tartarus-bot-example/src/club/subjugated/fb/message/firmware/: FirmwareChallengeRequest.py  FirmwareChallengeResponse.py  FirmwareMessage.py  GetFirmwareChunkRequest.py  GetFirmwareChunkResponse.py  GetLatestFirmwareRequest.py  GetLatestFirmwareResponse.py  MessagePayload.py  Version.py
tartarus-bot-example/src/tartarus_bot_example/: api_helper.py  bot.py  file_database.py  new_bot.py  new_keypair.py  signer.py
tartarus-coordinator/: .gitignore  Dockerfile  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
tartarus-coordinator/config/detekt/: detekt.yml
tartarus-coordinator/src/integrationTest/resources/: application-test.properties
tartarus-coordinator/src/main/resources/: application.properties  logback.xml
tartarus-coordinator/tartarus-coordinator/: app.py  author_session.py  contract.py  key_record.py  lock_session.py
tartarus-coordinator/tartarus-coordinator/buffers/: contract.fbs
tartarus-coordinator/tartarus-coordinator/subjugated/club/: Configuration.py  Contract.py  LockUpdateEvent.py  MessagePayload.py  SessionStart.py  SignedMessage.py  WhenISaySo.py
tartarus/public/: tartarus-config.json  tartarus-dev.json
tartarus/src/: index.html  styles.scss
tartarus/src/app/: admin-guard.guard.spec.ts  admin.guard.ts  app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts  auth.interceptor.ts  config.service.ts  crypto.service.ts  date-ago.pipe.ts  id-helper.service.spec.ts  id-helper.service.ts  qrcode.service.ts  sortable.directive.ts  tartartus-coordinator.service.spec.ts  tartarus-coordinator.service.ts  toast.service.ts  user-data.service.ts  websocket.service.ts
tartarus/src/environments/: environment.development.ts  environment.ts
usage_guide_for_authors/: index.html
util/: generate_challenge_keypair.py
(+513 files in other folders)
