[package]
name = "tartarus-firmware"
version = "0.1.0"
authors = ["Subspacedboy <ssb@subjugated.club>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "tartarus-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
st7789 = {path ="../st7789"}
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
qrcode = "0.14.0"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = "0.6.4"
base64 = "0.22.1"
data-encoding = "2.8.0"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
#typenum = "1.17.0"
anyhow = "1.0.95"
embedded-svc = "0.28.1"
flatbuffers = "25.2.10"
postcard = "1.1.1"
serde = { version = "1.0.203", features = ["derive"] }

[build-dependencies]
embuild = { features = ["espidf"], version = "0.33.0" }
