[package]
name = "tartarus-firmware"
version = "0.1.0"
authors = ["Subspacedboy <ssb@subjugated.club>"]
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "tartarus-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "z"
strip=true
lto = true
codegen-units = 1

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = true

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
generated = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
mipidsi = "0.9.0"
qrcode = "0.14.0"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand_core = "0.6.4"
data-encoding = "2.8.0"
sha2 = "0.10.8"
anyhow = "1.0.95"
embedded-svc = "0.28.1"
flatbuffers = "25.2.10"
ciborium = "0.2.2"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
hkdf = "0.12.4"
aes-gcm = "0.10.3"

[build-dependencies]
embuild = { features = ["espidf"], version = "0.33.0" }
