[project]
name = "support"
version = "0.1.0"
description = ""
authors = [
    {name = "SubspacedBoy",email = "ssb@subjugated.club"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "cryptography (>=44.0.1,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
